-Fix align and font in signIn -Change github link to site repo

--- a/src/main/resources/static/css/gameBoardStyle.css
+++ b/src/main/resources/static/css/gameBoardStyle.css
@@ -16,8 +16,8 @@ html, body {
 .site-description{
     text-align: center;
     padding: 50px;
-    min-width: 350px;
-    bottom: 50px;
+    min-width: 300px;
+    margin: auto;
 }
 
 #signInPage{
